<resources>
    <string name="app_name">Mude</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tenMeasures">10 Medidas</string>
    <string name="corruption">Corrupção</string>
    <string name="download">Downloads</string>
    <string name="multimedia">Multimídia</string>
    <string name="news">Notícias</string>
    <string name="about">Sobre</string>
    <string name="title_activity_corruption">Corruption</string>
    <string name="ten_measure_title_card">Nossa Meta</string>
    <string name="ten_measure_subtitle_card">Quantidade de Assinaturas Coletadas</string>
    <string name="number_subscriptions">1.500.000</string>
    <string name="ten_measure_title_card_2">As 10 Medidas</string>
    <string name="ten_measure_subtitle_card_2">
        Sofremos, no Brasil, com altos índices de corrupção. Segundo a Organização
        das Nações Unidas (ONU), estima-se que, aproximadamente, R$ 200 bilhões
        são desviados no Brasil, por ano.
    </string>
    <string name="ten_measure_msg">
        O combate à corrupção pode ter um novo capítulo na nossa história e uma nova
        realidade pode ser construída para quebrar o ciclo de impunidade.
    </string>
    <string name="ten_measure_handcufss">Criminalização do enriquecimento ilícito de agentes públicos</string>
    <string name="ten_measure_refund">Prevenção à corrupção, transparência e proteção à fonte de informação</string>
    <string name="ten_measure_strike">Resposabilização dos partidos políticos e criminalização do caixa 2</string>
    <string name="ten_measure_positive_dynamic">Aumento das penas e crime hediondo para corrupção de altos valores</string>
    <string name="ten_measure_priosioner">Reforma do sistema de prescrição penal</string>
    <string name="ten_measure_exercise">Celeridade nas ações de improbabilidade administrativa</string>
    <string name="ten_measure_law">Eficiência dos recursos no processo penal</string>
    <string name="ten_measure_rules">Ajustes nas nulidades penais</string>
    <string name="ten_measure_money_bag">Prisão preventiva para assegurar a devolução do dinheiro desviado</string>
    <string name="ten_measure_expansive">Recuperação do lucro derivado do crime</string>
    <string name="participate_title_1">Como posso participar?</string>
    <string name="participate_title_2">Formulário de Adesão</string>
    <string name="participate_subtext">Com 1,5 milhão de assinaturas, é possível apresentar um projeto de lei de iniciativa popular*. Esta é nossa meta.</string>
    <string name="participate_subtext_2" formatted="false">
        *Segundo o artigo 61, §2 da Constituição brasileira de 1998, regulamentado pela lei 9.709 de 1998,
        é permitida a apresentação de projetos de Lei pelos poderes Legislativo, Executivo e pela iniciativa popular.
        Neste último caso, a Constituição exige como procedimento a adesão mínima de 1% da população eleitoral nacional,
        mediante assinaturas, distribuídos por pelo menos 5 unidades federativas e no mínimo 0,3% dos eleitores em cada
        uma dessas unidades.
    </string>
    <string name="participate_subtext_3">Participe. Preencha o formulário padrão de coleta</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">CANCEL</string>
    <string name="path_name">Local</string>
</resources>
