<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:padding="5dp"
    >

    <android.support.v7.widget.CardView
        android:id="@+id/start_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        cardview:cardElevation="4dp"
        cardview:cardCornerRadius="5dp"
        android:background="@color/card_background">

        <RelativeLayout
            android:id="@+id/know_more_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/know_more_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ten_measure_title_card_2"
                android:textSize="30sp"
                android:textColor="@color/material_drawer_primary_dark"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:paddingTop="25dp"
                />

            <TextView
                android:id="@+id/know_more_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ten_measure_msg"
                android:layout_below="@+id/know_more_title"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:textColor="@color/material_drawer_primary_dark"
                android:textSize="14sp"
                android:padding="5dp"
                />

            <LinearLayout
                android:layout_below="@+id/know_more_subtitle"
                android:id="@+id/know_more_handcuffs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/handcuffs"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ten_measure_handcufss"
                    android:paddingTop="10dp"
                    android:textColor="@color/material_drawer_primary_dark"
                    android:textSize="14sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_below="@+id/know_more_handcuffs"
                android:id="@+id/know_more_refund"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/refund"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ten_measure_refund"
                    android:paddingTop="10dp"
                    android:textColor="@color/material_drawer_primary_dark"
                    android:textSize="14sp"
                    />
            </LinearLayout>


            <LinearLayout
                android:layout_below="@+id/know_more_refund"
                android:id="@+id/know_more_strike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/strike"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ten_measure_strike"
                    android:paddingTop="10dp"
                    android:textColor="@color/material_drawer_primary_dark"
                    android:textSize="14sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_below="@+id/know_more_strike"
                android:id="@+id/know_more_positive_dynamic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/positive_dynamic"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ten_measure_positive_dynamic"
                    android:paddingTop="10dp"
                    android:textColor="@color/material_drawer_primary_dark"
                    android:textSize="14sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_below="@+id/know_more_positive_dynamic"
                android:id="@+id/know_more_priosioner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/prisoner"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ten_measure_priosioner"
                    android:paddingTop="10dp"
                    android:textColor="@color/material_drawer_primary_dark"
                    android:textSize="14sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_below="@+id/know_more_priosioner"
                android:id="@+id/know_more_exercise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/exercise"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ten_measure_exercise"
                    android:paddingTop="10dp"
                    android:textColor="@color/material_drawer_primary_dark"
                    android:textSize="14sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_below="@+id/know_more_exercise"
                android:id="@+id/know_more_law"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/law"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ten_measure_law"
                    android:paddingTop="10dp"
                    android:textColor="@color/material_drawer_primary_dark"
                    android:textSize="14sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_below="@+id/know_more_law"
                android:id="@+id/know_more_rules"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rules"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ten_measure_rules"
                    android:paddingTop="10dp"
                    android:textColor="@color/material_drawer_primary_dark"
                    android:textSize="14sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_below="@+id/know_more_rules"
                android:id="@+id/know_more_money_bag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/money_bag"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ten_measure_money_bag"
                    android:paddingTop="10dp"
                    android:textColor="@color/material_drawer_primary_dark"
                    android:textSize="14sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_below="@+id/know_more_money_bag"
                android:id="@+id/know_more_expensive_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/expensive_2"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ten_measure_expansive"
                    android:paddingTop="10dp"
                    android:textColor="@color/material_drawer_primary_dark"
                    android:textSize="14sp"
                    />
            </LinearLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</ScrollView>