<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_drawer_background"
    android:orientation="vertical"
    android:padding="2dp"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <android.support.v7.widget.CardView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/start_card"
                android:layout_margin="4dp"
                cardview:cardElevation="4dp"
                cardview:cardCornerRadius="5dp"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/ten_measure_title"
                        android:text="@string/ten_measure_title_card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="24dp"
                        android:textSize="24sp"
                        android:textColor="@color/material_drawer_primary_dark"
                        android:textStyle="bold"
                        android:layout_centerHorizontal="true"
                        />
                    <TextView
                        android:id="@+id/ten_measure_subtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ten_measure_subtitle_card"
                        android:layout_below="@+id/ten_measure_title"
                        android:layout_centerHorizontal="true"
                        android:textColor="@color/material_drawer_primary_dark"
                        android:paddingTop="12dp"
                        android:textSize="14sp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/material_drawer_accent_dark"
                        android:id="@+id/ten_measure_number_subscriptions"
                        android:text="@string/number_subscriptions"
                        android:textSize="50sp"
                        android:textStyle="bold"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/ten_measure_subtitle"
                        android:paddingTop="36dp"
                        android:paddingBottom="36dp"
                        />

                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/start_card"
                android:layout_margin="4dp"
                cardview:cardElevation="4dp"
                cardview:cardCornerRadius="5dp"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/ten_measure_title_2"
                        android:text="@string/ten_measure_title_card_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="24dp"
                        android:textSize="24sp"
                        android:textColor="@color/material_drawer_primary_dark"
                        android:textStyle="bold"
                        android:layout_centerHorizontal="true"
                        />
                    <TextView
                        android:id="@+id/ten_measure_subtitle_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ten_measure_subtitle_card_2"
                        android:layout_below="@+id/ten_measure_title_2"
                        android:layout_centerHorizontal="true"
                        android:textColor="@color/material_drawer_primary_dark"
                        android:paddingTop="12dp"
                        android:textSize="14sp"
                        android:gravity="center"
                        />
                    <Button
                        android:id="@+id/ten_measure_know_more"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Saiba Mais"
                        android:layout_below="@+id/ten_measure_subtitle_2"
                        android:background="@drawable/know_more_selector_button"
                        android:textColor="@color/md_white_1000"
                        android:layout_margin="4dp"
                        />
                    <Button
                        android:id="@+id/ten_measure_participate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Participe"
                        android:layout_below="@+id/ten_measure_know_more"
                        android:background="@drawable/participate_border_button"
                        android:textColor="@color/md_white_1000"
                        android:layout_margin="4dp"
                        />
                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>